[gd_scene load_steps=9 format=3 uid="uid://5grbkmxqlcab"]

[ext_resource type="Script" path="res://Classes/Effects/GetTheBallRollingEffect/Ball8.gd" id="1_e3peu"]
[ext_resource type="PackedScene" uid="uid://cbsytituebtbc" path="res://Classes/Effects/GetTheBallRollingEffect/Bola8.glb" id="2_e3sye"]
[ext_resource type="PackedScene" uid="uid://br1eurxdqpgpn" path="res://Classes/Effects/GetTheBallRollingEffect/PaloPool.glb" id="3_inj8a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_olcpn"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_anmdh"]
radius = 1.08257

[sub_resource type="Animation" id="Animation_sc44p"]
resource_name = "Push"
length = 3.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PoolStick/PoolModel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.0521107, -0.25, 0, 0.25, 0, 0.0521069, -0.25, 0, 0.25, 0, 0.0521069, -0.25, 0, 0.25, 0, 0.0521069, -0.25, 0, 0.25, 0, 0.0521069, -0.25, 0, 0.25, 0, 0.0521088, -0.25, 0, 0.25, 0, 0.0521088, -0.25, 0, 0.25, 0, 0.0521107, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.766667, 2.5, 2.7, 3, 3.2, 3.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PoolStick/PoolModel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(25.6529, -0.25, 0, 0.25, 0, 4.23779, -0.25, 0, 0.25, 0, 5.35767, -0.25, 0, 0.25, 0, 4.23779, -0.25, 0, 0.25, 0, 5.35767, -0.25, 0, 0.25, 0, 4.23779, -0.25, 0, 0.25, 0, 5.47269, -0.25, 0, 0.25, 0, 5.47269, -0.25, 0, 0.25, 0, 4.06571, -0.25, 0, 0.25, 0, 4.06571, -0.25, 0, 0.25, 0, 25.6529, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.766667, 1.23333, 1.7, 2.16667, 2.5, 2.7, 3, 3.2, 3.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PoolStick/PoolModel:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(52.733, -0.25, 0, 0.25, 0, 12.7565, -0.25, 0, 0.25, 0, 15.1991, -0.25, 0, 0.25, 0, 12.7565, -0.25, 0, 0.25, 0, 15.1991, -0.25, 0, 0.25, 0, 12.7565, -0.25, 0, 0.25, 0, 17.2473, -0.25, 0, 0.25, 0, 17.2473, -0.25, 0, 0.25, 0, 12.4201, -0.25, 0, 0.25, 0, 12.4201, -0.25, 0, 0.25, 0, 52.733, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.766667, 1.23333, 1.7, 2.16667, 2.5, 2.7, 3, 3.2, 3.5)
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"push"
}]
}

[sub_resource type="Animation" id="Animation_uupdl"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PoolStick/PoolModel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.0521107, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PoolStick/PoolModel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(25.6529, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PoolStick/PoolModel:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(52.733, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwrxg"]
_data = {
"Push": SubResource("Animation_sc44p"),
"RESET": SubResource("Animation_uupdl")
}

[node name="Ball8" type="StaticBody3D"]
collision_mask = 7
axis_lock_linear_y = true
script = ExtResource("1_e3peu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_olcpn")

[node name="Bola8" parent="." instance=ExtResource("2_e3sye")]
transform = Transform3D(0.805, 0, 0, 0, 0.805, 0, 0, 0, 0.805, 0, 0, 0)

[node name="HitArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_anmdh")

[node name="PoolStickAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwrxg")
}

[node name="PoolStick" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
top_level = true

[node name="PoolModel" parent="PoolStick" instance=ExtResource("3_inj8a")]
transform = Transform3D(0.675, 0, 0, 0, -0.207085, 0.642449, 0, -0.642449, -0.207085, 0.0521107, 25.6529, 52.733)

[node name="BounceCast" type="RayCast3D" parent="."]
collision_mask = 7

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
